# Hospital-Management-System

./: README.md
HospitalSystem/: Admin.h  Appointment.h  Bill.h  CMakeLists.txt  Doctor.h  FileHandler.h  HospitalException.h  HospitalSystem.h  Makefile  MyString.h  Patient.h  Person.h  Prescription.h  Storage.h  Validator.h  doctors.txt  main.cpp  patients.txt
